--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,8 @@ main .skills .contents .skills-list .status-bar{ height: 40px; border-radius: 20
 main .skills .contents .skills-list .status-bar .status-nav{ font-size: 0.750rem; font-weight: 700; }
 main .skills .contents .skills-list .tools-list{ width: 80%; margin: 0 auto; display: flex; flex-direction: column; gap: 32px; padding: 33px 0; }
 main .skills .contents .skills-list .tools-list .tools-item{ display: flex; flex-direction: row; justify-content: space-between; align-items: center; }
-main .skills .contents .skills-list .tools-list .tools-item .item-img{ width: 46px; height: 46px; background-color: #B8C5E6; }
+main .skills .contents .skills-list .tools-list .tools-item .item-img{ width: 46px; height: 46px; display: flex; justify-content: center; align-items: center; }
+main .skills .contents .skills-list .tools-list .tools-item .item-img img{ width: 46px; max-width: 46px; max-height: 46px; }
 main .skills .contents .skills-list .tools-list .tools-item .item-bar{ display: flex; flex-direction: column; width: 60%; gap: 8px; }
 main .skills .contents .skills-list .tools-list .tools-item .item-bar .bar-name{ font-size: 0.750rem; font-weight: 700; }
 main .skills .contents .skills-list .tools-list .tools-item .item-bar .bar-per{ width: 100%; height: 10px; background-color: #BCDDFF; border-radius: 5px; }
