--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body::-webkit-scrollbar-track { background: rgba(233, 190, 130, 0.1); } */
 
 
 /* Header start */
-header{ min-width: 850px; width: 100%; height: 50px; padding: 0 20px; background-color: #f0f0f0; position: fixed; z-index: 2; }
+header{ min-width: 850px; width: 100%; height: 50px; padding: 0 20px; background-color: #e5effa; position: fixed; z-index: 2; }
 header .status-bar{ height: 100%; }
 header .status-bar nav{  }
 header .status-bar nav .gnb{  }
@@ -130,7 +130,7 @@ header .status-bar nav .gnb .nav-list .nav-item .item{ color: #333; text-decorat
 /* main start */
 main{ padding-top: 50px; }
 
-main .home{ width: 100%; height: calc(100vh - 50px); background-color: #f7f7f7; position: relative; box-sizing: border-box; overflow: hidden; }
+main .home{ width: 100%; height: calc(100vh - 50px); background-color: #fff; position: relative; box-sizing: border-box; overflow: hidden; }
 main .home .main-img{ background: url(../img/main-img.png) no-repeat 100% 100%; background-size: cover; width: 100%; height: 100%; padding: 0; margin: 0; position: absolute; }
 main .home .main-bus{ position: absolute; right: -300px; top: -230px; animation: slideBus 16s cubic-bezier(0.4, 0, 0.2, 1) infinite; animation-delay: 1s; }
 /* main .home .main-bus{ position: absolute; right: -300px; top: -250px; animation: slideBus 10s linear infinite; } */
@@ -160,7 +160,7 @@ main .about .contents .about-info .info-txt .info-txt-list .info-txt-item{  }
 /* main .about .contents .about-info .info-txt .info-txt-list .info-txt-item{ display: flex; flex-direction: column; gap: 20px; } */
 
 
-main .skills{ width: 100%; padding-bottom: 80px; background-color: #f8f8f8; }
+main .skills{ width: 100%; padding-bottom: 80px; background-color: #fff; }
 main .skills .title{ padding-top: 60px; }
 main .skills .contents{ width: 100%; }
 main .skills .contents .skills-list{ display: flex; flex-direction: row; justify-content: space-between; align-items: center; width: 80%; margin: 0 auto; padding-top: 20px; }
@@ -356,7 +356,7 @@ main .contact .contents .contact-inTouch .contact-main .email-form .form-area .s
     main .skills .contents .skills-list .tools-list .tools-item:hover .item-bar .bar-per .bar-front.per60, main .skills .contents .skills-list .tools-list .tools-item:hover .item-bar .bar-per .bar-front.per50,
     main .skills .contents .skills-list .tools-list .tools-item:hover .item-bar .bar-per .bar-front.per40 {  }
 
-    main .portfolio{ background-color: #f5f5f5; min-height: 900px; }
+    main .portfolio{ min-height: 900px; }
     main .portfolio .title{ padding-top: 30px; }
     main .portfolio .contents{  }
     main .portfolio .contents .tab-nav{  }
