--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ main .portfolio .contents .tab-contents .modal .modal-window .modal-area .modal-
 main .contact{ width: 100%; }
 main .contact .title{ padding-top: 60px; }
 main .contact .contents{ display: block; position: relative; min-height: 1000px; }
-main .contact .contents .contact-talk{ width: 40%; max-width: 640px; min-width: 420px; height: 640px; box-shadow: 0 10px 18px 0 rgba(0,0,0,0.15); border-radius: 20px; background-color: #fff; margin: 0 auto; z-index: 1; position: absolute; right: calc(50%); top: calc(50% - 320px); }
+main .contact .contents .contact-talk{ width: 40%; max-width: 640px; min-width: 420px; box-shadow: 0 10px 18px 0 rgba(0,0,0,0.15); border-radius: 20px; background-color: #fff; margin: 0 auto; z-index: 1; position: absolute; right: calc(50%); top: calc(50% - 320px); }
 main .contact .contents .contact-talk .status-bar{ height: 40px; border-radius: 20px 20px 0 0; }
 main .contact .contents .contact-talk .contact-main{ display: flex; flex-direction: column; gap: 70px; padding: 52px 0; }
 main .contact .contents .contact-talk .contact-main .title-mid{ font-size: 3.75rem; font-weight: 900; color: rgba(0,0,0, 0.25); padding: 0 70px; }
